--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,11 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+ul.list-unstyled li {
+  margin: 0.5rem 0;
+  text-align: left; /* asegura alineación del texto */
+  display: flex;
+  align-items: center;
+}
+
