--- a/src/index.css
+++ b/src/index.css
@@ -179,3 +179,9 @@ button:focus-visible {
   animation: flash 2.0s infinite;
 }
 
+/* Forzar palomas verdes a blanco sin tocar SVG */
+.benefits-list svg {
+  filter: brightness(0) invert(1);
+}
+
+
