--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -47,7 +47,7 @@
 /* ====== Card ====== */
 .RN__card{
   width:70%;
-  background:var(--card);
+  background-color: azure;
   border-radius:24px;
   padding:28px;
   box-shadow:0 16px 36px rgba(3,10,36,.20);
