--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -153,9 +153,10 @@
 
 /* ====== Logo ====== */
 .RN__logo{
-  height:40px;
-  width:auto;
-  margin-left:20px;
+    height: 35px;
+    width: auto;
+    margin-left: 30px;
+    margin-top: 10px;
 }
 
 /* ====== Responsive ====== */
